src/test/ui/kindck/kindck-nonsendable-1.stderr
error[E0277]: `Rc<usize>` cannot be sent between threads safely
  --> $DIR/kindck-nonsendable-1.rs:9:5
   |
LL | fn bar<F:FnOnce() + Send>(_: F) { }
   |                     ---- required by this bound in `bar`
...
LL |     bar(move|| foo(x));
   |     ^^^ ------------- within this `[closure@$DIR/kindck-nonsendable-1.rs:9:9: 9:22]`
   |     |
   |     `Rc<usize>` cannot be sent between threads safely
   |
   = help: within `[closure@$DIR/kindck-nonsendable-1.rs:9:9: 9:22]`, the trait `Send` is not implemented for `Rc<usize>`
   = note: required because it appears within the type `[closure@$DIR/kindck-nonsendable-1.rs:9:9: 9:22]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
